force-app/main/default/objects/Share_Wallet__c/Share_Wallet__c.object-meta.xml
<CustomObject>
    <description>Case#2642#1345 &amp; #3508 PCC - Rudolf Niehaus
Share Wallet related to a PCC record. This was previously cross sell opportunities + share wallet information on the same record. The API name was renamed and updated in all relevant code</description>
    <label>Share of Wallet</label>
    <nameField>
        <displayFormat>ShareWallet-{0000}</displayFormat>
        <label>Share of Wallet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Share of Wallet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>