force-app/main/default/objects/Share_Wallet__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Budget at the Client</description>
    <inlineHelpText>Budgeted number for this financial year</inlineHelpText>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>