force-app/main/default/objects/Share_Wallet__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>case#1263 - Rudolf Niehaus
Master-detail between share of wallet and the client</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Share of Wallet</relationshipLabel>
    <relationshipName>Share_of_Wallet</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>