force-app/main/default/objects/Share_Wallet__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments on Cross Sell Opportunity</description>
    <inlineHelpText>Warning: Pasted images or text that cause a horizontal scroll bar to appear at the bottom of the text box will result in the text or image being cut off when generating the PCC form.</inlineHelpText>
    <label>Comments</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>