force-app/main/default/objects/Share_Wallet__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>case#1263 - Rudolf Niehaus
Other Banks that are doing Business on behalf of the Client under that line of Business.</description>
    <inlineHelpText>Other banks that are doing business on behalf of the Client under that line of business. Please separate each Competitor bank name by commas (32700 characters  or less)</inlineHelpText>
    <label>Competition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>