force-app/main/default/objects/Share_Wallet__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>The division to which the cross sell opportunity belongs</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Transactional Products and Services</fullName>
            </value>
            <value>
                <fullName>Vehicle and Asset Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>