force-app/main/default/objects/Share_Wallet__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <description>Used in javascript validation in Submit for Approval button</description>
    <formula>VALUE( TEXT(Financial_Year__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>