force-app/main/default/objects/Share_Wallet__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Case#1050 - 04/2011 - Rudolf Niehaus</description>
    <inlineHelpText>Period Financial Information Covers</inlineHelpText>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Year</fullName>
                <default>true</default>
                <label>Full Year</label>
            </value>
            <value>
                <fullName>YTD January</fullName>
            </value>
            <value>
                <fullName>YTD February</fullName>
            </value>
            <value>
                <fullName>YTD March</fullName>
            </value>
            <value>
                <fullName>YTD April</fullName>
            </value>
            <value>
                <fullName>YTD May</fullName>
            </value>
            <value>
                <fullName>YTD June</fullName>
            </value>
            <value>
                <fullName>YTD July</fullName>
            </value>
            <value>
                <fullName>YTD August</fullName>
            </value>
            <value>
                <fullName>YTD September</fullName>
            </value>
            <value>
                <fullName>YTD October</fullName>
            </value>
            <value>
                <fullName>YTD November</fullName>
            </value>
            <value>
                <fullName>YTD December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>