force-app/main/default/objects/Share_Wallet__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Standard Bank Revenue Amount. Changed the Field Label to Estimated Standard Bank Revenue (2013-09-27)</description>
    <inlineHelpText>Division Specific Estimated Revenue Standard Bank makes from this Client</inlineHelpText>
    <label>Estimated Standard Bank Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>