force-app/main/default/objects/Share_Wallet__c/fields/Share_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet__c</fullName>
    <description>Share of wallet (How much of the client spend we capture)</description>
    <formula>If( (OR(Nullvalue(Revenue__c,0)==0, Nullvalue(Total_Wallet_Size__c,0)==0) ),
0, Revenue__c / Total_Wallet_Size__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Standard Bank Revenue / Estimated Total Wallet Size</inlineHelpText>
    <label>Estimated Share of Wallet (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>