force-app/main/default/objects/Share_Wallet__c/fields/Target_Share__c.field-meta.xml
<CustomField>
    <fullName>Target_Share__c</fullName>
    <description>The percentage of the Client&apos;s Estimated Share of Wallet we aim for</description>
    <inlineHelpText>The percentage of the Client&apos;s Estimated Share of Wallet we aim for</inlineHelpText>
    <label>Target Share (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>