force-app/main/default/objects/Share_Wallet__c/fields/Tech_Number_of_SOW_Products__c.field-meta.xml
<CustomField>
    <fullName>Tech_Number_of_SOW_Products__c</fullName>
    <description>Technical field used to check for SOW products - to be used in Validation</description>
    <label>Tech Number of SOW Products</label>
    <summaryForeignKey>Share_of_Wallet_Product__c.Share_of_Wallet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>