force-app/main/default/objects/Share_Wallet__c/fields/Total_Wallet_Size__c.field-meta.xml
<CustomField>
    <fullName>Total_Wallet_Size__c</fullName>
    <description>Formula field to calculate the Estimated Total Wallet Size</description>
    <inlineHelpText>The Client&apos;s Estimated Total Wallet Size for this Division</inlineHelpText>
    <label>Estimated Total Wallet Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>